@@ -4,7 +4,13 @@
 
  Changes between 0.9.7b and 0.9.7c  [xx XXX 2003]
 
-  *) 
+  *) Various S/MIME bugfixes and compatibility changes:
+     output correct application/pkcs7 MIME type if
+     PKCS7_NOOLDMIMETYPE is set. Tolerate some broken signatures.
+     Output CR+LF for EOL if PKCS7_CRLFEOL is set (this makes opening
+     of files as .eml work). Correctly handle very long lines in MIME
+     parser.
+     [Steve Henson]
 
  Changes between 0.9.7a and 0.9.7b  [10 Apr 2003]
 
